--- a/oving1/toplevel_summary.html
+++ b/oving1/toplevel_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>toplevel Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>toplevel Project Status (10/13/2012 - 20:18:47)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>oving1.xise</TD>
@@ -13,18 +13,19 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>toplevel</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Mapped</TD>
+<TD>Synthesized</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc6slx16-2csg324</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD>
+No Errors</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 12.4</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD ALIGN=LEFT>No Warnings</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -42,7 +43,7 @@
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel_envsettings.html'>
+<A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
@@ -52,300 +53,7 @@ System Settings</A>
 
 
 
-&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
-<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='5'><B>Device Utilization Summary</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DeviceUtilizationSummary"><B>[-]</B></a></TD></TR>
-<TR ALIGN=CENTER BGCOLOR='#FFFF99'>
-<TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>1,165</TD>
-<TD ALIGN=RIGHT>18,224</TD>
-<TD ALIGN=RIGHT>6%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>1,154</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Latches</TD>
-<TD ALIGN=RIGHT>11</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Latch-thrus</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as AND/OR logics</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>983</TD>
-<TD ALIGN=RIGHT>9,112</TD>
-<TD ALIGN=RIGHT>10%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>966</TD>
-<TD ALIGN=RIGHT>9,112</TD>
-<TD ALIGN=RIGHT>10%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>905</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 output only</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>61</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number used as ROM</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Memory</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>2,176</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>17</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice register load</TD>
-<TD ALIGN=RIGHT>16</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice carry load</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with other load</TD>
-<TD ALIGN=RIGHT>1</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>490</TD>
-<TD ALIGN=RIGHT>2,278</TD>
-<TD ALIGN=RIGHT>21%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>1,552</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>421</TD>
-<TD ALIGN=RIGHT>1,552</TD>
-<TD ALIGN=RIGHT>27%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>569</TD>
-<TD ALIGN=RIGHT>1,552</TD>
-<TD ALIGN=RIGHT>36%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>562</TD>
-<TD ALIGN=RIGHT>1,552</TD>
-<TD ALIGN=RIGHT>36%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
-<TD ALIGN=RIGHT>43</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>27</TD>
-<TD ALIGN=RIGHT>18,224</TD>
-<TD ALIGN=RIGHT>1%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>138</TD>
-<TD ALIGN=RIGHT>232</TD>
-<TD ALIGN=RIGHT>59%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of RAMB16BWERs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>32</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of RAMB8BWERs</TD>
-<TD ALIGN=RIGHT>2</TD>
-<TD ALIGN=RIGHT>64</TD>
-<TD ALIGN=RIGHT>3%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFIO2/BUFIO2_2CLKs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>32</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFIO2FB/BUFIO2FB_2CLKs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>32</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFG/BUFGMUXs</TD>
-<TD ALIGN=RIGHT>1</TD>
-<TD ALIGN=RIGHT>16</TD>
-<TD ALIGN=RIGHT>6%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as BUFGs</TD>
-<TD ALIGN=RIGHT>1</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as BUFGMUX</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of DCM/DCM_CLKGENs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>4</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of ILOGIC2/ISERDES2s</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>248</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of IODELAY2/IODRP2/IODRP2_MCBs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>248</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of OLOGIC2/OSERDES2s</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>248</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BSCANs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>4</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFHs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>128</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFPLLs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>8</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFPLL_MCBs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>4</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of DSP48A1s</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>32</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of ICAPs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>1</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of MCBs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>2</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of PCILOGICSEs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>2</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of PLL_ADVs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>2</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of PMVs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>1</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of STARTUPs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>1</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of SUSPEND_SYNCs</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>1</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>4.07</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-</TABLE>
+
 
 
 
@@ -357,22 +65,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>on 3. okt 23:06:06 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='Z:/github/tdt4255/oving1\_xmsgs/xst.xmsgs?&DataKey=Warning'>98 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='Z:/github/tdt4255/oving1\_xmsgs/xst.xmsgs?&DataKey=Info'>45 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel.bld'>Translation Report</A></TD><TD>Current</TD><TD>on 3. okt 23:06:06 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>on 3. okt 23:06:07 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>on 3. okt 23:06:06 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>lø 13. okt 20:22:02 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 19:55:24 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel_map.mrp'>Map Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 19:55:24 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 19:55:24 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>on 3. okt 23:06:06 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>on 3. okt 23:06:06 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 19:55:24 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 19:55:24 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\netgen/synthesis/toplevel_synthesis.nlf'>Post-Synthesis Simulation Model Report</A></TD><TD>Current</TD><TD COLSPAN='2'>on 3. okt 23:06:06 2012</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>on 3. okt 23:06:07 2012</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>on 3. okt 23:06:07 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\netgen/synthesis/toplevel_synthesis.nlf'>Post-Synthesis Simulation Model Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>lø 13. okt 19:55:24 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>lø 13. okt 19:55:25 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>lø 13. okt 19:55:25 2012</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/13/2012 - 17:45:47</center>
+<br><center><b>Date Generated:</b> 10/13/2012 - 20:18:48</center>
 </BODY></HTML>
