--- a/oving1/toplevel_summary.html
+++ b/oving1/toplevel_summary.html
@@ -378,22 +378,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>fr 9. nov 17:01:16 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.bld'>Translation Report</A></TD><TD>Current</TD><TD>fr 9. nov 17:01:16 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>fr 9. nov 17:01:16 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.par'>Place and Route Report</A></TD><TD>Current</TD><TD>fr 9. nov 17:01:16 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>lø 10. nov 19:57:09 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.bld'>Translation Report</A></TD><TD>Current</TD><TD>lø 10. nov 19:57:09 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>lø 10. nov 19:57:09 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.par'>Place and Route Report</A></TD><TD>Current</TD><TD>lø 10. nov 19:57:09 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>fr 9. nov 17:01:16 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>fr 9. nov 17:01:16 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>lø 10. nov 19:57:09 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>lø 10. nov 19:57:09 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\netgen/synthesis/toplevel_synthesis.nlf'>Post-Synthesis Simulation Model Report</A></TD><TD>Current</TD><TD COLSPAN='2'>fr 9. nov 17:01:16 2012</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>fr 9. nov 17:01:16 2012</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>fr 9. nov 17:01:16 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\netgen/synthesis/toplevel_synthesis.nlf'>Post-Synthesis Simulation Model Report</A></TD><TD>Current</TD><TD COLSPAN='2'>lø 10. nov 19:57:09 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>lø 10. nov 19:57:09 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>lø 10. nov 19:57:09 2012</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/09/2012 - 17:48:13</center>
+<br><center><b>Date Generated:</b> 11/10/2012 - 20:10:56</center>
 </BODY></HTML>
